# consurf-standalone-plugin

./: .gitignore  README.html  README.md  plugin.yaml  pyproject.toml
example/: LRRK2_Mammalia.txt
